--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
         padding: 10px 0;
         font-size: 14px;
       }
+        img {
+        height: 5rem;
+        width: 5rem;
+      }
     </style>
   </head>
   <body>
@@ -70,6 +74,7 @@
     <!-- Main content: Mine Selection -->
     <div class="container">
       <div>
+         <img src="./mining-industry.png" alt="mining-industry" />
         <h1>Monitor a Mine Site</h1>
         <a href="Main.html" class="mine-button">Eastern Mine</a>
         <a href="Mine2.html" class="mine-button">Central Mine</a>
