--- a/Mine3.html
+++ b/Mine3.html
@@ -41,6 +41,16 @@
         max-width: 100%;
       }
 
+      .bar-charts {
+        display: flex;
+        flex-direction: column; /* Align bar charts vertically */
+        gap: 20px;
+      }
+
+      .bar-container {
+        width: 100%; /* Adjust bar chart container width */
+      }
+
       .back-button {
         background-color: #4caf50;
         color: white;
@@ -82,6 +92,25 @@
       <canvas id="phChart"></canvas>
       <canvas id="doChart"></canvas>
     </div>
+
+    <h2>Bar Charts: Values over Time</h2>
+    <div class="bar-charts">
+      <div class="bar-container">
+        <canvas id="wfBarChart"></canvas>
+      </div>
+      <div class="bar-container">
+        <canvas id="sulpBarChart"></canvas>
+      </div>
+      <div class="bar-container">
+        <canvas id="limeBarChart"></canvas>
+      </div>
+      <div class="bar-container">
+        <canvas id="phBarChart"></canvas>
+      </div>
+      <div class="bar-container">
+        <canvas id="doBarChart"></canvas>
+      </div>
+    </div>
     <a href="index.html" class="back-button">Go Back to Mine Selection</a>
     <script>
       const apiUrl =
@@ -95,7 +124,8 @@
           }
           const data = await response.json();
           populateTable(data);
-          createCharts(data);
+          createLineCharts(data);
+          createBarCharts(data);
         } catch (error) {
           console.error("Error fetching data:", error);
         }
@@ -120,7 +150,7 @@
         });
       }
 
-      function createCharts(data) {
+      function createLineCharts(data) {
         const labels = data.map((record) => record.Time); // Using "Time" for labels
 
         new Chart(document.getElementById("flowChart").getContext("2d"), {
@@ -200,6 +230,125 @@
                 fill: false,
               },
             ],
+          },
+        });
+      }
+
+      function createBarCharts(data) {
+        const labels = data.map((record) => record.Time); // Time as labels
+
+        new Chart(document.getElementById("wfBarChart").getContext("2d"), {
+          type: "bar",
+          data: {
+            labels: labels,
+            datasets: [
+              {
+                label: "Water Flow (WF)",
+                data: data.map((record) => record.WF),
+                backgroundColor: "rgba(54, 162, 235, 0.6)",
+                borderColor: "rgba(54, 162, 235, 1)",
+                borderWidth: 1,
+              },
+            ],
+          },
+          options: {
+            responsive: true,
+            scales: {
+              x: { title: { display: true, text: "Time" } },
+              y: { title: { display: true, text: "Water Flow (WF)" } },
+            },
+          },
+        });
+
+        new Chart(document.getElementById("sulpBarChart").getContext("2d"), {
+          type: "bar",
+          data: {
+            labels: labels,
+            datasets: [
+              {
+                label: "Sulfuric Acid (Sulp)",
+                data: data.map((record) => record.Sulp),
+                backgroundColor: "rgba(255, 159, 64, 0.6)",
+                borderColor: "rgba(255, 159, 64, 1)",
+                borderWidth: 1,
+              },
+            ],
+          },
+          options: {
+            responsive: true,
+            scales: {
+              x: { title: { display: true, text: "Time" } },
+              y: { title: { display: true, text: "Sulfuric Acid (Sulp)" } },
+            },
+          },
+        });
+
+        new Chart(document.getElementById("limeBarChart").getContext("2d"), {
+          type: "bar",
+          data: {
+            labels: labels,
+            datasets: [
+              {
+                label: "Limestone (Lime)",
+                data: data.map((record) => record.Lime),
+                backgroundColor: "rgba(255, 99, 132, 0.6)",
+                borderColor: "rgba(255, 99, 132, 1)",
+                borderWidth: 1,
+              },
+            ],
+          },
+          options: {
+            responsive: true,
+            scales: {
+              x: { title: { display: true, text: "Time" } },
+              y: { title: { display: true, text: "Limestone (Lime)" } },
+            },
+          },
+        });
+
+        new Chart(document.getElementById("phBarChart").getContext("2d"), {
+          type: "bar",
+          data: {
+            labels: labels,
+            datasets: [
+              {
+                label: "pH Level",
+                data: data.map((record) => record["pH "]),
+                backgroundColor: "rgba(75, 192, 192, 0.6)",
+                borderColor: "rgba(75, 192, 192, 1)",
+                borderWidth: 1,
+              },
+            ],
+          },
+          options: {
+            responsive: true,
+            scales: {
+              x: { title: { display: true, text: "Time" } },
+              y: { title: { display: true, text: "pH Level" } },
+            },
+          },
+        });
+
+        new Chart(document.getElementById("doBarChart").getContext("2d"), {
+          type: "bar",
+          data: {
+            labels: labels,
+            datasets: [
+              {
+                label: "Dissolved Oxygen (DO)",
+                data: data.map((record) => record.DO),
+                backgroundColor: "rgba(153, 102, 255, 0.6)",
+                borderColor: "rgba(153, 102, 255, 1)",
+                borderWidth: 1,
+              },
+            ],
+          },
+          options: {
+            responsive: true,
+            scales: {
+              x: { title: { display: true, text: "Time" } },
+              y: { title: { display: true, text: "Dissolved Oxygen (DO)" } },
+            },
           },
         });
       }
