--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
       <div>
          <img src="./mining-industry.png" alt="mining-industry" />
         <h1>Monitor a Mine Site</h1>
-        <a href="Main.html" class="mine-button">Eastern Mine</a>
-        <a href="Mine2.html" class="mine-button">Central Mine</a>
-        <a href="Mine3.html" class="mine-button">Western Mine</a>
+        <a href="M1.html" class="mine-button">Eastern Mine</a>
+        <a href="M2.html" class="mine-button">Central Mine</a>
+        <a href="M3.html" class="mine-button">Western Mine</a>
       </div>
     </div>
 
