--- a/M3.html
+++ b/M3.html
@@ -194,7 +194,7 @@
     <button class="btn" id="fetch-data-btn">Fetch Next Data</button>
 
      <a href="index.html" class="back-button">Go Back to Mine Selection</a>
-     <a href="Main.html" class="back-button">Historical Data</a>
+     <a href="Mine3.html" class="back-button">Historical Data</a>
 
     <footer>
         <p>&copy; 2024 Aqua Sentinel | Powered by Phoenix</p>
