--- a/M2.html
+++ b/M2.html
@@ -201,7 +201,7 @@
     </footer>
 
     <script>
-        const apiUrl = 'https://3l4vv4ror2.execute-api.us-east-1.amazonaws.com/MineA-stage01'; // Replace with your API Gateway URL
+        const apiUrl = 'https://ov7wxvj2o6.execute-api.us-east-1.amazonaws.com/MineB-stage01'; // Replace with your API Gateway URL
 
         let currentIndex = 0;
         let fetchedData = [];
