--- a/M3.html
+++ b/M3.html
@@ -201,7 +201,7 @@
     </footer>
 
     <script>
-        const apiUrl = 'https://3l4vv4ror2.execute-api.us-east-1.amazonaws.com/MineA-stage01'; // Replace with your API Gateway URL
+        const apiUrl = 'https://j4i6y919y8.execute-api.us-east-1.amazonaws.com/MineC-stage01'; // Replace with your API Gateway URL
 
         let currentIndex = 0;
         let fetchedData = [];
