--- a/M2.html
+++ b/M2.html
@@ -191,7 +191,7 @@
         </table>
     </section>
 
-    <button class="btn" id="fetch-data-btn">Fetch Next Data</button>
+    <button class="btn" id="fetch-data-btn">Update</button>
 
      <a href="index.html" class="back-button">Go Back to Mine Selection</a>
      <a href="Mine2.html" class="back-button">Historical Data</a>
